src/test/resources/semantic/custom/reject/voidArrayDecl.ul
void main() {
}

void foo() {
    void[5] bar;
}
